--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 	},
 	"homepage": "https://github.com/freeCodeCamp/boilerplate-npm#readme",
 	"version": "1.0.0",
-	"keywords": [],
+	"keywords": [
+		"freeCodeCamp"
+	],
 	"license": "ISC"
 }
