--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 	"homepage": "https://github.com/freeCodeCamp/boilerplate-npm#readme",
 	"version": "1.0.0",
 	"keywords": [
-		"freeCodeCamp"
+		"freecodecamp"
 	],
-	"license": "ISC"
+	"license": "ISC, MIT"
 }
